# soui

./: .gitignore  .gitmodules  Build.bat  Build_vs13inc.bat  Build_vs13ind.bat  CMakeBuild.bat  CMakeLists.txt  Makefile  README.md  Readme-work.md  building-cmake.md  clone_demos.bat  common.pri  cpy-cfg.pri  demo_com.pri  license.txt  products.md  soui.08.sln  soui.13.sln  soui.pro  soui.sln  souiprosubdir.xml  如何使用cmake生成VS工程文件.txt  如何使用qmake生成VS工程文件.txt  开发者名单.csv  新版本32+64位编译.txt
SOUI/: CMakeLists.txt  ReadMe.txt  SOUI.pro  resource.h  soui.rc  soui.vcproj  soui.vcxproj  soui.vcxproj.filters
SOUI/include/: SApp.h  soui-version.h  souistd.h
SOUI/src/: SApp.cpp
__cmake/: CMakeLists.txt  global.cmake  internal_utils.cmake  soui-demo.cmake
cmake/: CMakeLists.txt  SOUIConfig.cmake.in  SOUIHelpers.cmake  SOUIOptions.cmake
components/: CMakeLists.txt  com-cfg.h  commask.h  commgr2.h  components.pro  components.sln
components/AsyncTaskMgr/: AsyncTaskMgr.cpp  AsyncTaskMgr.h  AsyncTaskMgr.pro  AsyncTaskMgr.rc  AsyncTaskMgr.vcproj  semaphore.cpp  thread.cpp  thread.h
components/SIpcObject/: CMakeLists.txt  SIpcObject.cpp  SIpcObject.h  SIpcObject.pro  SIpcObject.rc  SIpcObject.vcproj  ShareMemBuffer.cpp  ShareMemBuffer.h  stdafx.h
components/ScriptModule-LUA/: CMakeLists.txt  ScriptModule-LUA.pro  ScriptModule-LUA.sln  scriptmodule-lua.vcproj  scriptmodule-lua.vcxproj  scriptmodule-lua.vcxproj.filters
components/TaskLoop/: CMakeLists.txt  TaskLoop.cpp  TaskLoop.h  TaskLoop.pro  TaskLoop.rc  TaskLoop.vcproj  TaskLoop.vcxproj  TaskLoop.vcxproj.filters  semaphore.h  thread.cpp  thread.h
components/imgdecoder-gdip/: CMakeLists.txt  ReadMe.txt  imgdecoder-gdip.cpp  imgdecoder-gdip.h  imgdecoder-gdip.pro  imgdecoder-gdip.rc  imgdecoder-gdip.vcproj  imgdecoder-gdip.vcxproj  imgdecoder-gdip.vcxproj.filters
components/imgdecoder-png/: CMakeLists.txt  decoder-apng.cpp  decoder-apng.h  imgdecoder-png.cpp  imgdecoder-png.h  imgdecoder-png.pro  imgdecoder-png.rc  imgdecoder-png.vcproj  imgdecoder-png.vcxproj  imgdecoder-png.vcxproj.filters
components/imgdecoder-stb/: CMakeLists.txt  imgdecoder-stb.cpp  imgdecoder-stb.h  imgdecoder-stb.pro  imgdecoder-stb.rc  imgdecoder-stb.vcproj  imgdecoder-stb.vcxproj  imgdecoder-stb.vcxproj.filters  stb_image.h
components/imgdecoder-wic/: CMakeLists.txt  ReadMe.txt  dllmain.cpp  imgdecoder-wic.cpp  imgdecoder-wic.h  imgdecoder-wic.pro  imgdecoder-wic.rc  imgdecoder-wic.vcproj  imgdecoder-wic.vcxproj  imgdecoder-wic.vcxproj.filters  resource.h  targetver.h
components/log4z/: CMakeLists.txt  COPYRIGHT  log4z.cpp  log4z.h  log4z.pro  log4z.rc  log4z.vcproj  log4z.vcxproj  log4z.vcxproj.filters
components/render-gdi/: CMakeLists.txt  GradientFillHelper.cpp  GradientFillHelper.h  ReadMe.txt  render-gdi.cpp  render-gdi.h  render-gdi.pro  render-gdi.rc  render-gdi.vcproj  render-gdi.vcxproj  render-gdi.vcxproj.filters  resource.h  stdafx.h
components/render-skia/: CMakeLists.txt  PathEffect-Skia.cpp  PathEffect-Skia.h  PathMeasure-Skia.cpp  PathMeasure-Skia.h  ReadMe.txt  Render-Skia2-i.h  Render-Skia2.cpp  Render-Skia2.h  drawtext-skia.cpp  drawtext-skia.h  render-skia.cpp  render-skia.h  render-skia.pro  render-skia.rc  render-skia.vcproj  render-skia.vcxproj  render-skia.vcxproj.filters  resource.h  skia2rop2.cpp  skia2rop2.h  stdafx.h
components/resprovider-7zip/: CMakeLists.txt  SResProvider7Zip.cpp  SResProvider7Zip.h  Zip7Archive.cpp  Zip7Archive.h  cursoricon.cpp  resource.h  resprovider-7zip.pro  resprovider-7zip.rc  resprovider-7zip.vcproj  resprovider-7zip.vcxproj  resprovider-7zip.vcxproj.filters  stdafx.h  zip7resprovider-param.h
components/resprovider-zip/: CMakeLists.txt  ReadMe.txt  SResProviderZip.cpp  SResProviderZip.h  ZipArchive.h  cursoricon.cpp  resprovider-zip.pro  resprovider-zip.rc  resprovider-zip.vcproj  resprovider-zip.vcxproj  resprovider-zip.vcxproj.filters  stdafx.h  zipArchive.cpp  zipresprovider-param.h
components/translator/: CMakeLists.txt  ReadMe.txt  resource.h  stdafx.h  translator.cpp  translator.h  translator.pro  translator.rc  translator.vcproj  translator.vcxproj  translator.vcxproj.filters
controls.extend/: CMakeLists.txt  ExtendCtrls.cpp  ExtendCtrls.h  ExtendSkins.cpp  ExtendSkins.h  FileHelper.h  SAniWindow.cpp  SAniWindow.h  SAnimImg.cpp  SAnimImg.h  SAnimator.h  SButtonEx.cpp  SButtonEx.h  SCalendar2.cpp  SCalendar2.h  SChatEdit.cpp  SChatEdit.h  SChromeTabCtrl.cpp  SChromeTabCtrl.h  SComboBoxEx.cpp  SComboBoxEx.h  SDateTimeEdit.cpp  SDateTimeEdit.h  SDocHostUIHandler.cpp  SDocHostUIHandler.h  SFadeFrame.cpp  SFadeFrame.h  SFreeMoveWindow.cpp  SFreeMoveWindow.h  SGroupList.cpp  SGroupList.h  SIECtrl.cpp  SIECtrl.h  SIPAddressCtrl.cpp  SIPAddressCtrl.h  SImageEx.cpp  SImageEx.h  SImageMaskWnd.cpp  SImageMaskWnd.h  SImagePlayer.cpp  (+42 more)
controls.extend/SMcListViewEx/: Adapter参考.h  SHeaderCtrlEx.cpp  SHeaderCtrlEx.h  SLoopButton.cpp  SLoopButton.h  SMCListViewEx.cpp  SMCListViewEx.h  STabCtrlHeaderBinder.cpp  STabCtrlHeaderBinder.h
controls.extend/dlghelp/: souidlgs.h
controls.extend/gif/: SAniImgFrame.h  SGifPlayer.cpp  SGifPlayer.h  (+4 more)
demo/: CAdapter.h  CDropTarget.h  CMakeLists.txt  FormatMsgDlg.cpp  FormatMsgDlg.h  MainDlg.cpp  MainDlg.h  MemFlash.cpp  MemFlash.h  SAniWindow.cpp  SAniWindow.h  SCheckBox2.cpp  SCheckBox2.h  SInterpolatorView.cpp  SInterpolatorView.h  SMatrixWindow.cpp  SMatrixWindow.h  SPathView.cpp  SPathView.h  SRoundImage.cpp  SRoundImage.h  SmileyCreateHook.cpp  SmileyCreateHook.h  ThreadObject.cpp  ThreadObject.h  adapter.h  build_rc2.bat  demo.cpp  demo.pro  demo.rc  demo.vcproj  demo.vcxproj  demo.vcxproj.filters  resource.h  stdafx.h
soui-demo/: CMakeLists.txt
soui-sys-resource/: CMakeLists.txt  resource.h  soui-sys-resource.pro  soui-sys-resource.rc  soui-sys-resource.vcproj  soui-sys-resource.vcxproj  soui-sys-resource.vcxproj.filters  theme_sys_res.rc2
third-part/: CMakeLists.txt  third-part.pro  third-part.sln
utilities/: CMakeLists.txt  ReadMe.txt  resource.h  utilities.pro  utilities.rc  utilities.vcproj  utilities.vcxproj  utilities.vcxproj.filters
(+1125 files in other folders)
