LINK_DIRECTORIES(${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
add_subdirectory(360)
add_subdirectory(360Preview)
add_subdirectory(baiduwp)
add_subdirectory(BesLyric)
add_subdirectory(CapScreenDemo)
add_subdirectory(DropDemo)
add_subdirectory(FrogPlay)
add_subdirectory(iectrl)
add_subdirectory(mclistview_demo)
add_subdirectory(mfc.demo)
add_subdirectory(MultiLangs)
#add_subdirectory(nsisdemo/setupdll)
add_subdirectory(PCManager)
add_subdirectory(QQLogin)
add_subdirectory(QQMain)
add_subdirectory(ScreenShotTool)
add_subdirectory(SLogViewer)
add_subdirectory(SoftMaster)
add_subdirectory(SoTool)
#add_subdirectory(Soui-cef)
add_subdirectory(SouiEditor)
add_subdirectory(souispy)
add_subdirectory(souitest)
add_subdirectory(SweepingEdge)
add_subdirectory(ThreeClearGame)
add_subdirectory(TXMgr)
add_subdirectory(UiEditor)
add_subdirectory(VUI)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
if(COMPILER_SUPPORTS_CXX11)
	add_subdirectory(TIMDemo)
	message(STATUS "build TIMDemo ON")
else()
	message(STATUS "build TIMDemo OFF")
endif()
