add_subdirectory(zlib)
add_subdirectory(png)
add_subdirectory(skia)
add_subdirectory(lua-52)
add_subdirectory(mhook)
add_subdirectory(smiley)
add_subdirectory(gtest)
add_subdirectory(7z)
add_subdirectory(Scintilla)
add_subdirectory(sqlite3)

#include(CheckCXXCompilerFlag)
#CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
#if(COMPILER_SUPPORTS_CXX11)
#if(MSVC_VERSION LESS 1700)
#	message(STATUS "build 7z OFF")
#else()
#	add_subdirectory(7z)
#	message(STATUS "build 7z ON")
#endif()